# godot_dev

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  SConstruct  _Build_Extension.bat  build_engine.bat  clean.bat  clean_all_binaries.bat  clean_extension_binaries.bat  generate_project_files.bat  godot_dev.sln  open_sln.bat
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: builds.yml  extension-build.yml  terrain-extension-builds.yml  terrain.yml
demo/: example.tscn  project.godot
demo/scripts/: ComputeCubes.glsl  FreeCamera.gd.uid  MarchTables.glsl  example.gd  example.gd.uid
extensions/terrain/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  SConstruct
extensions/terrain/src/: abstract_task_processer.h  chunk.cpp  chunk.h  chunk_data.h  chunk_generator.cpp  chunk_generator.h  chunk_loader.cpp  chunk_loader.h  chunk_lut.gen.h  chunk_viewer.cpp  chunk_viewer.h  collision_generator.cpp  collision_generator.h  concurrent_chunk_map.h  generate_chunk_lut.py  godot_utility.h  mesh_generator.cpp  mesh_generator.h  mesh_generator_pool.cpp  mesh_generator_pool.h  register_types.cpp  safe_pool.h  safe_queue.h  safe_queue.hpp  terrain_constants.hpp  terrain_performance_monitor.cpp  terrain_performance_monitor.h  thread_pool.h
project/: chunk_loader.tscn  example.tscn  project.godot
project/Materials/: ChunkMaterial.tres  DebugGridMaterial.tres
project/Shaders/: DebugGridShader.gdshader  DebugGridShader.gdshader.uid
project/scripts/: ChunkViewerAutoRegister.gd  ChunkViewerAutoRegister.gd.uid  ComputeCubes.glsl  ComputeCubes.glsl.import  FreeCamera.gd  MarchTables.glsl.import  PlayerCharacter.gd  PlayerCharacter.gd.uid  ViewControl.gd  ViewControl.gd.uid  example.gd  on_screen_stats.gd  on_screen_stats.gd.uid
src/: chunk_generator.h  chunk_loader.h  mesh_generator.cpp  mesh_generator.h  mesh_generator_pool.cpp  safe_queue.hpp  terrain_constants.hpp
